--- a/11F/content.css
+++ b/11F/content.css
@@ -178,7 +178,7 @@ height:120px;min-height:120px;
 /*headerBGColor*/
 background-color:#ffffff;
 /*headerBGURL*/
-background-image:url(header_CRIE.png);
+background-image:url(header_CRIE_p.png);
 /*headerBGRepeat*/
 background-repeat:no-repeat;
 /*headerBGPosition*/
