--- a/Scratch_GmedranoTIC/content.css
+++ b/Scratch_GmedranoTIC/content.css
@@ -1,156 +1,112 @@
-/* vietnamese */
 @font-face {
-  font-family: 'Encode Sans';
+  font-family: 'Open Sans';
   font-style: normal;
-  font-weight: 300;
-  src: local('Encode Sans Light'), local('EncodeSans-Light'), url(EncodeSans-Light_vietnamese.woff2) format('woff2');
-  unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
+  font-weight: 400;
+  src: local('Open Sans'), local('OpenSans'), url(open-sans.woff2) format('woff2'), url(open-sans.woff) format('woff');
 }
-/* latin-ext */
 @font-face {
-  font-family: 'Encode Sans';
+  font-family: 'Open Sans';
   font-style: normal;
-  font-weight: 300;
-  src: local('Encode Sans Light'), local('EncodeSans-Light'), url(EncodeSans-Light_latin-ext.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+  font-weight: 700;
+  src: local('Open Sans Bold'), local('OpenSans-Bold'), url(open-sans-bold.woff2) format('woff2'), url(open-sans-bold.woff) format('woff');
 }
-/* latin */
-@font-face {
-  font-family: 'Encode Sans';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Encode Sans Light'), local('EncodeSans-Light'), url(EncodeSans-Light_latin.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-html,body{min-height:100%}
 html{padding:0}
-body{font:1.05em/1.6 "Encode Sans",Arial,Helvetica,sans-serif;padding:20px;margin:0;text-align:left;color:#333;background:#fff}
-input,select,textarea,.feedback{font-family:"Encode Sans",​Arial,Helvetica,sans-serif;font-size:1em}
-.pre-code,.highlighted-code{font-family:"Encode Sans",​Arial,Helvetica,sans-serif;font-size:.9em;border-radius:0}
-a{color:#007691}
-/* Header is also in single page */
-#header h1{margin:0;font-size:1em;color:#004F66}
-#header,#emptyHeader,#nodeDecoration{height:auto;font-size:1em;text-align:left;letter-spacing:.5px;padding:26px 35px 34px 20px;border:1px solid #ddd;margin-bottom:0;background:url(_intef_title_bg.png) no-repeat 50% bottom}
-.exe-single-page #header{font-size:1.55em}
-#nodeTitle{font-size:1.55em;margin:0;color:#004F66}
-#header h1,#nodeTitle{text-shadow:0 0 8px rgba(255,255,255,.6),0 0 5px rgba(255,255,255,.6),0 0 2px rgba(255,255,255,.9)}
-/* .nodeTitle when single page */
-.nodeTitle{padding:25px 0;border-bottom:1px dotted #97afb2;margin:25px 0 0 0;color:#3a4749;letter-spacing:.5px;font-size:1.5em}
-h2{font-size:1.4em;color:#007691;letter-spacing:.5px;font-weight:normal}
-h3{font-size:1.35em;color:#576F72;letter-spacing:.5px;font-weight:normal}
-p{margin:1em 0}
-ol,ul{color:#3a4749}
-#main{height:auto!important;height:300px;min-height:300px}
+body{font:1em/1.5 'Open Sans',Arial,Verdana,Helvetica,sans-serif;padding:15px;margin:0;text-align:left;color:#333333;background:#ffffff}
+a{color:#1570a6}
+#header,#emptyHeader{text-align:left;height:100px;padding-left:20px;font-size:1.2em;line-height:100px;color:#fff;background:#1679C3;text-shadow:1px 1px 1px #333;border-bottom:1px solid #e3e3e3;border-top:1px solid #e3e3e3} /* Header is also in single page */
+#header h1{margin:0;font-size:1em}
+#nodeDecoration{text-align:left;padding:1em 20px;margin-bottom:2em;background:#1679C3;text-shadow:1px 1px 1px #333;border-bottom:1px solid #e3e3e3;border-top:1px solid #e3e3e3}
+#nodeTitle,.nodeTitle{font-size:1.5em;margin:0;font-weight:bold;color:#fff} /* .nodeTitle when single page */
+.nodeTitle{padding:.1em 0 .6em 0;border-bottom:1px solid #1679C3;margin-top:1em}
+h2{font-size:1.4em;color:#666}
+#main .iDeviceTitle{display:inline;font-size:1.2em}
+h3{font-size:1.25em;color:#777}
 #main h4{font-size:1.2em}
 #main h5{font-size:1.1em}
-.iDevice{margin:25px 0}
+.iDevice{margin:2em 0}
+.iDevice_icon{width:23px;height:auto;margin-right:5px} /* Icons: "Iconic" (Creative Commons by-sa), by P. J. Onori (http://www.somerandomdude.com/work/iconic/) */
 
 /* iDevice icons */
-.iDevice_header{background:url(icon_exe.png) no-repeat 0 bottom;padding-left:75px;position:relative}
-.hidden-idevice .iDevice_header{background-color:#f5f7f8;padding-left:65px;box-shadow:rgba(0, 0, 0, 0.3) 3px 3px 4px}
-.iDevice_header.iDevice_header_noIcon{padding:0}
-.hidden-idevice .iDevice_header.iDevice_header_noIcon{padding-left:20px}
-
-.activityIdevice .iDevice_header{background-image:url(icon_gears.png)}
-.readingIdevice .iDevice_header{background-image:url(icon_knowledge.png)}
-.CasestudyIdevice .iDevice_header{background-image:url(icon_teacher_screen.png)}
-.FileAttachIdeviceInc .iDevice_header{background-image:url(icon_atom.png)}
-.GalleryIdevice .iDevice_header{background-image:url(icon_camera.png)}
-.objectivesIdevice .iDevice_header{background-image:url(icon_award.png)}
-.ReflectionIdevice .iDevice_header{background-image:url(icon_think.png)}
-.preknowledgeIdevice .iDevice_header{background-image:url(icon_bulb.png)}
-
-/* Interactive activities */
+.iDevice_header{background:url(icon_generic.gif) no-repeat 0 5px;padding-left:40px;margin-bottom:10px}
+.textIdevice .iDevice_header{background-position:0 12px}
+.activityIdevice .iDevice_header{background-image:url(icon_activity.gif)}
+.readingIdevice .iDevice_header{background-image:url(icon_reading.gif)}
 .ListaIdevice .iDevice_header,
 .QuizTestIdevice .iDevice_header,
 .MultichoiceIdevice .iDevice_header,
 .TrueFalseIdevice .iDevice_header,
 .MultiSelectIdevice .iDevice_header,
-.ClozeIdevice .iDevice_header,
-.ScrambledListIdevice .iDevice_header{background-image:url(icon_list.png)}
+.ClozeIdevice .iDevice_header{background-image:url(icon_question.gif)}
+.CasestudyIdevice .iDevice_header{background-image:url(icon_casestudy.gif)}
+.preknowledgeIdevice .iDevice_header{background-image:url(icon_preknowledge.gif)}
+.GalleryIdevice .iDevice_header{background-image:url(icon_gallery.gif)}
+.objectivesIdevice .iDevice_header{background-image:url(icon_objectives.gif)}
+.ReflectionIdevice .iDevice_header{background-image:url(icon_reflection.gif)}
 
-/* iDevice title */
-.iDeviceTitle{font-size:1.4em;display:inline;font-weight:normal;vertical-align:top;top:0;color:#007691;line-height:60px;padding-right:25px;letter-spacing:.5px}
-.hidden-idevice .iDeviceTitle{color:#526668}
-
+.iDeviceTitle{font-size:1.2em;vertical-align:top;top:-2px;color:#666;line-height:2em}
 .iDevice_content{overflow:auto}
-/* iDevice content */
-.iDevice_inner{padding:10px 20px;background:#f5f7f8;box-shadow:rgba(0, 0, 0, 0.3) 3px 3px 4px}
-
-#siteFooter{font-size:.95em;margin:25px 0}
-#siteFooter a{color:#DB0B00}
-#lbOverlay{background-color:#e2e2e2}
+.iDevice_inner{padding: 10px 20px;border:1px solid #f0f0f0;background:#f9f9f9;color:#444}
+#packageLicense{font-size:.95em}
+#siteFooter{padding-left:20px;height:50px;line-height:50px;background:#666;color:#fff;font-size:.95em}
+#siteFooter a{color:#FFF;text-decoration:underline}
+input,select,textarea{font-family:Arial,Verdana,Helvetica,sans-serif;font-size:1em}
+#lbOverlay{background-color:#f3f3f3}
 #lbOuterContainer{border-color:#ddd}
 .ExternalUrlIdevice iframe{border:none}
+/* Download package iDevice */
+.download-packageIdevice .exe-download-package-link a{background:#1679c3}
 /* Lightbox */
 .exeImageGallery{width:100%}
 /* base.css */
 .block,.feedback{padding:0}
+.feedback{font-family:Arial,Verdana,Helvetica,sans-serif;font-size:1em}
 li{list-style-position:outside}
 #wikipedia-content ul li{list-style-image:none;margin-bottom:auto}
+.exe-dl .icon{line-height:16px}
+.js .exe-dl dd{margin-left:34px}
+.styled-qc{margin-top:2.5em;padding-left:3.8em}
+.styled-qc:before{top:10px}
 /* Form buttons */
-.iDevice_inner input[type=submit],.feedbackbutton{background:#007691;border:0;padding:4px 10px;color:#fff;margin-bottom:1em}
-.iDevice_inner input[type=submit]:hover,.feedbackbutton:hover,.iDevice_inner input[type=submit]:focus,.feedbackbutton:focus{background:#3a4749}
+.iDevice_inner input[type=submit],.feedbackbutton{background:#888;border:0;padding:3px 5px;color:#fff;border-radius:5px;text-shadow:1px 1px 1px #000;box-shadow:1px 1px 3px 0 #ccc;margin-bottom:1em}
+.iDevice_inner input[type=submit]:hover,.feedbackbutton:hover,.iDevice_inner input[type=submit]:focus,.feedbackbutton:focus{background:#555;color:#f3f3f3;box-shadow:none}
 /* Hide/Show iDevice */
-.toggle-idevice{text-align:right;display:block;margin-right:13px}
-.iDevice_header .toggle-idevice{position:absolute;right:13px;bottom:13px;margin:0}
-.toggle-idevice a{display:inline-block;width:20px;height:20px;background:url(_intef_icons.png) no-repeat 0 -20px}
-.toggle-idevice .show-idevice{background-position:0 0}
-.toggle-idevice span,#printNode a span{position:absolute;overflow:hidden;clip:rect(0,0,0,0);height:0}
-/* eXe < 2.1 */
-.iDevice a,#siteFooter a,#packageLicense a,.toggle-idevice a{text-decoration:underline}
-.iDevice a:hover,#siteFooter a:hover,#packageLicense a:hover,.toggle-idevice a:hover{text-decoration:none}
+.toggle-idevice{margin:12px 0 0;text-align:right;display:block}
+.iDevice_header .toggle-idevice{float:right;padding-top:2px;margin:0}
+.toggle-idevice a{display:inline-block;width:16px;height:16px;background:url(_simplepoint_navigation.png) 0 -100px}
+.toggle-idevice .show-idevice{background-position:-50px -100px}
+.toggle-idevice span{position:absolute;overflow:hidden;clip:rect(0,0,0,0);height:0}
+
+.textIdevice,.FreeTextIdevice{max-width:900px;margin:2em auto;font-size:1.3em;line-height:2em}
+.exe-fx{font-size:.85em}
+.iDevice_content_wrapper{overflow:hidden}
+.FreeTextIdevice .figcaption{font-size:.85em}
+.FreeTextIdevice li{margin:.5em auto;color:#555}
+.FreeTextIdevice .pre-code{font-size:1.1em}
+.FreeTextIdevice iframe,.FreeTextIdevice video,.FreeTextIdevice audio,.FreeTextIdevice object{margin-top:1em;margin-bottom:1em}
+/* Effects */
+.fx-carousel-pagination a,.fx-pagination a{padding:3px 20px;margin:1px 4px}
+.fx-page-content,.fx-carousel-content{padding:1px 25px .5em 25px}
+.fx-timeline-container a.fx-timeline-expand{padding:0 15px}
+.fx-timeline-event{padding-left:21px;color:#777!important;margin-top:1em;margin-bottom:1.5em}
 /* Licenses */
-#packageLicense{text-align:left;font-size:.8em;padding:0 20px;color:#FFF;line-height:1em;margin:0 0 25px 0;background:#526668;border:1px solid #526668;box-shadow:rgba(0, 0, 0, 0.4) 3px 3px 4px}
-#packageLicense p{margin:20px 0}
-#packageLicense a{color:#FFEA92;text-decoration:underline}
-#packageLicense.propietary{position:absolute;overflow:hidden;clip:rect(0,0,0,0);height:0}
-#packageLicense.cc{padding:0 20px 0 110px;background:#526668 url(_intef_licenses.gif) no-repeat 20px 5px}
-#packageLicense.cc-by-sa{background-position:20px -95px}
-#packageLicense.cc-by-nd{background-position:20px -195px}
-#packageLicense.cc-by-nc{background-position:20px -295px}
-#packageLicense.cc-by-nc-sa{background-position:20px -395px}
-#packageLicense.cc-by-nc-nd{background-position:20px -495px}
-#packageLicense.cc-0{background-position:20px -595px}
-
-/* eXe Figures */
-.exe-figure{margin:2.5em 0}
-.exe-figure,.exe-figure a{color:#6F6F6F}
-.position-center{margin:2.5em auto}
-.position-right{margin:2.5em 0 2.5em auto}
-.float-left{margin:.5em 1.5em 1em 0}
-.float-right{float:right;margin:.5em 0 1em 2em}
-
-/* Tabs */
-.exe-tabs a{color:#005D78}
-
-#printNode{margin:0;position:absolute;top:33px;right:33px}
-#printNode.with-toggler{margin-bottom:0}
-#printNode a{display:block;width:30px;height:30px;background:#fff url(_intef_print.png) no-repeat 50% 50%;box-shadow:rgba(0, 0, 0, 0.3) 3px 3px 4px;border-radius:15px}
-
-@media print{
-	#nodeDecoration,#header,#emptyHeader{color:#000;text-shadow:none;background:none;border:none;border-bottom:1px solid #E2E2E2;padding:20px 0}
-	#packageLicense,#packageLicense.cc{background:none;padding:0;border:none;box-shadow:none;text-align:center}
-	#packageLicense,#packageLicense a,#nodeTitle,.nodeTitle{color:#000}
-	.hidden-idevice .iDevice_header{box-shadow:none}
-	.iDevice_inner{box-shadow:none;padding:10px 0}
-	.iDevice_header{padding:5px 0}
-	.toggle-idevice{display:none}	
-	/* Uncomment this to print URL after links:
+#packageLicense{text-align:center;margin:0;background:#000;color:#fff;line-height:25px;font-size:.75em;padding:10px 20px}
+#packageLicense p{margin:0}
+#packageLicense a{color:#fff}
+/* Steps (use arrows) */
+#steps-instructions{color:#BBB;font-size:.75em}
+#steps-instructions strong{margin-right:.5em}
+#steps-instructions a{color:#BBB;text-decoration:underline;margin-left:.5em}
+#steps-instructions a:hover,#steps-instructions a:focus{text-decoration:none}
+.exe-web-site.js .presentation-slide{display:none}
+@media print {
+	div.node{page-break-after:auto} /* base.css */
+	html body{background:#fff;color:#000;font-size:11pt}
+	@page{margin:1.5cm}
 	a[href^=http]{font-weight:bold;text-decoration:none!important}
 	a[href^=http]:after{content:" <" attr(href) "> "}
-	*/	
+	.iDevice{margin-bottom:20px}	
+	#main .iDevice_header{background:none;padding-left:0}
+	body #header,body #emptyHeader,body #nodeDecoration{height:auto!important;min-height:0;text-shadow:none;padding-left:0}
+	.toggle-idevice{display:none}
+	.textIdevice,.FreeTextIdevice{max-width:100%;font-size:1em;line-height:1.5em}
 }
-
-/* Hint & Feedback */
-.iDevice_hint_content{border:1px solid #ecf0f1;background:#FFF}
-.iDevice_inner .feedback{background:#FFF;border:1px solid #ecf0f1;padding:0 1em;margin:1em 0}
-.iDevice_inner .feedback-right{background:#E9F9DF}
-.iDevice_inner .feedback-wrong{background:#FDFDDB}
-.iDevice_inner .iDevice_answer-feedback{background:none;border:none;padding:0;margin:0}
-.TrueFalseIdevice .feedback{margin-top:1.5em}
-
-/* UDL iDevice */
-.exe-udlContent-content-simplified{line-height:2.5em;letter-spacing:.15em;word-spacing:.15em}
-.exe-udlContent-content-simplified p{margin:2em 0}
