--- a/Scratch_GmedranoTIC/nav.css
+++ b/Scratch_GmedranoTIC/nav.css
@@ -1,115 +1,120 @@
-html,body{min-height:100%}
-html{background:#FFF url(_intef_bg.png) repeat 0 -2px}
-body{padding:0;
-	text-align:center;
-	background:url(_intef_header.png) no-repeat 50% 0
-}
-@media all and (min-width:1px) {
-	body{
-		background:url(_intef_header.png) 50% 0 no-repeat,url(_intef_footer.png) center bottom no-repeat
-	}
-}
+html,body{margin:0;padding:0;text-align:center;background:#FFF}
 #lbOverlay{background:#f3f3f3}
-#content{width:100%;max-width:1230px;min-width:300px;margin:0 auto;text-align:left;position:relative;padding-bottom:21px}
-#main-wrapper{padding:0 25px 1px 305px;background:#fff url(_intef_left_column.gif) repeat-y 0 0;box-shadow:rgba(0, 0, 0, 0.4) 3px 3px 8px}
-.no-nav #main-wrapper{padding-left:25px;background:#fff}
+#content{width:100%;margin:0 auto;text-align:left;position:relative;padding-bottom:21px}
+.no-nav #content{background:#fff}
+#main-wrapper{padding:10px 20px 0 470px}
+.no-nav #main-wrapper{padding-left:20px}
 #main{width:100%}
-#header,#emptyHeader{border:none;padding:40px 210px 20px 20px;background:none;font-size:1.55em}
-#emptyHeader{height:42px}
-#headerContent{color:#004F66;text-shadow:1px 1px 1px #FFF}
-#nodeDecoration{padding:0;margin:0 0 25px 0;border:none;text-shadow:none;background:none;border-bottom:1px dotted #97afb2}
-#nodeTitle{padding:17px 85px 15px 0;color:#798B8C;letter-spacing:.5px;font-size:1.7em;font-weight:normal}
-.exe-search-bar-on #nodeTitle{padding-right:0}
-#siteFooter{padding:5px 20px 20px 20px;text-align:right;margin-top:-56px}
-/* Navigation */
-#skipNav{font-size:.95em;text-align:center;padding-top:25px}
-#skipNav a{padding:5px 15px;background:#3a4749}
-#siteNav{width:279px;float:left;padding-right:20px;margin:15px 0 70px 0}
-#siteNav ul,#siteNav li{margin:0;padding:0;list-style:none}
-#siteNav a{font-size:.95em;display:block;padding:7px 10px 7px 20px;border-bottom:1px solid #F0F0F0;color:#3a4749;background:#F0F0F0}
-#siteNav a:hover,#siteNav a:focus{color:#007691;background:#f5f7f8;border-color:#f5f7f8}
-#siteNav ul ul a{padding-left:35px;font-size:.9em;background:#f5f7f8;border-color:#f5f7f8;color:#007691}
-#siteNav ul ul a:hover,#siteNav ul ul a:focus{background:#fff;border-color:#fff;color:#3a4749}
-#siteNav .active{color:#007691;text-decoration:underline;background:#fff;border-color:#fff}
-#siteNav .other-section{display:none}
-#siteNav ul ul ul a{padding-left:50px}
-/* IE6 */
-* html #siteNav a{display:inline-block;width:249px}
-* html #siteNav ul ul a{width:234px}
-* html #siteNav ul ul ul a{width:219px}
-* html #main{width:auto}
-/* Pagination */
-.pagination{padding-top:27px;text-align:right;font-size:.95em}
-.pagination .sep{display:none}
-.pagination a{padding:5px 15px;background:#526668;color:#FFF;margin-left:18px;
-text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3), 0px 0px 5px rgba(0, 0, 0, 0.3), 0px 0px 2px rgba(0, 0, 0, 0.6);
-box-shadow:rgba(0, 0, 0, 0.25) 3px 3px 4px}
-.pagination a span span{display:none}
-.pagination a:hover,.pagination a:focus{background:#7A989C}
-#topPagination{position:absolute;top:-2px;width:100%;right:20px}
-#topPagination .prev{margin-left:18px}
-.pagination .prev{box-shadow:rgba(0, 0, 0, 0.25) -3px 3px 4px}
-#topPagination .pagination{text-align:right}
-#bottomPagination{padding:0 20px 71px 0}
-.no-nav #bottomPagination{padding-left:20px}
-/* Page counter */
-#topPagination .page-counter{margin-left:16px}
-#bottomPagination .page-counter{margin-left:16px;margin-right:0}
+#header,#emptyHeader{border-top:none;padding-right:200px;height:auto!important;height:50px;min-height:50px;line-height:50px;font-size:1.1em;letter-spacing:1px}
+#nodeDecoration{padding:0;margin:0;background:none;border:none}
+#nodeTitle{padding:.1em 0 .6em 0;border-bottom:1px solid #f3f3f3}
+#siteFooter{position:fixed;bottom:0;width:100%}
+.page-counter{display:none}
+#bottomPagination .page-counter{position:fixed;color:#FFF;z-index:999;bottom:15px;right:75px;font-size:.9em;display:inline-block;margin:0 auto}
+.page-counter-label{display:none}
 
-#exe-client-search-form{text-align:left;padding:25px 0 0;margin:0;font-size:.95em}
-
-@media all and (min-width:1230px) {
-	#bottomPagination,#siteFooter{padding-right:0}
-	#topPagination{right:0}
-	#header{padding-left:0}
+@media all and (min-width: 700px) {
+    #packageLicense{position:fixed;bottom:50px;right:0;width:100%;padding:0;text-indent:20px}
+    #packageLicense.cc{width:80px;height:15px;padding:0;right:10px;bottom:60px}
+    #packageLicense.cc p{position:absolute;overflow:hidden;clip:rect(0,0,0,0);height:0}
+    #packageLicense.cc{background-image:url(_simplepoint_licenses.gif);background-repeat:no-repeat;background-position:0 0}
+    #packageLicense.cc-by-sa{background-position:0 -100px}
+    #packageLicense.cc-by-nd{background-position:0 -200px}
+	#packageLicense.cc-by-nc{background-position:0 -300px}
+    #packageLicense.cc-by-nc-sa{background-position:0 -400px}
+    #packageLicense.cc-by-nc-nd{background-position:0 -500px}
+    #packageLicense.cc-0{background-position:0 -600px}
+    #made-with-eXe{right:auto;left:0;bottom:6px;z-index:99}
+    #made-with-eXe a{padding:0 5px;background-position:5px 50%;background-color:#666;color:#666;box-shadow:none}
+    #made-with-eXe a:hover{color:#fff}
 }
-
+/* Navigation */
+#skipNav{text-align:center;padding-top:25px}
+@media screen{ #skipNav{display:none} }
+#skipNav a{padding:2px 6px 3px 6px;box-shadow:0 0 3px 0 #ccc;background:#333}
+#siteNav{width:430px;float:left;padding-right:20px;margin-bottom:70px}
+#siteNav,#siteNav ul{background:#fff;border-color:#f0f0f0}
+#siteNav li:hover,#siteNav li.sfhover{background:#f0f0f0}
+#siteNav ul,#siteNav li{margin:0;padding:0;list-style:none}
+#siteNav a{display:block;padding:8px 0 8px 20px;border-width:0 1px 1px 0;border-style:solid;color:#4D4D4D;border-color:#e3e3e3 #f4f4f4}
+#siteNav a:hover,#siteNav a:focus{color:#000;background:#f0f0f0}
+* html #siteNav a{display:inline-block;width:100%} /* IE6 */
+#siteNav ul ul a{padding-left:35px;font-size:.95em;color:#555}
+#siteNav .active{color:#e81123;font-weight:bold}
+#siteNav .other-section{display:none}
+#siteNav ul ul ul a{padding-left:60px}
+/* Pagination */
+.pagination a{display:block;width:16px;height:16px;background:url(_simplepoint_navigation.png) no-repeat -50px -50px;position:fixed;z-index:999}
+.pagination .sep{display:none}
+#topPagination{position:absolute;top:0}
+#topPagination a{top:17px;right:17px}
+#bottomPagination{padding-top:20px;text-align:right}
+#bottomPagination a{bottom:17px;right:17px}
+#content .prev{right:43px;background-position:0 -50px}
 /* Autoclear */
 #content:after{content:".";display:block;clear:both;visibility:hidden;line-height:0;height:0} 
 #content{display:inline-block}
 html[xmlns] #content{display:block}
 * html #content{height: 1%;overflow:visible}
 
-#header-options{margin:20px 0 0;position:absolute;top:5.9em;right:20px}
-#header-options a{font-size:.95em;margin-left:15px;background:#fff url(_intef_print.png) no-repeat 5px 50%;padding:0 10px 0 32px;color:#547276}
-#header-options a:hover,#header-options a:focus{color:#526668}
-#header-options #toggle-nav{background-image:url(_intef_menu.gif)}
-#exe-client-search-text{max-width:50%}
-.exe-client-search-result{background:#FFEA92;padding:0 2px}
-a .exe-client-search-result{color:#00566a}
+/* IE6 */
+* html body{padding-bottom:20px}
+* html #main{width:auto}
+* html #siteNav a{width:420px}
+* html #siteNav ul ul a{width:405px}
+* html #siteNav ul ul ul a{width:380px}
 
-@media all and (max-width: 768px) {
-	#content{width:100%;border:none;margin:0}
-	#nodeTitle{padding-right:0}
-	#main-wrapper{background:#fff}
-	#header,#emptyHeader{padding-left:20px;padding-right:20px;background-position:50% 23px}
-	#exe-client-search-text{max-width:70%}
-	#topPagination{display:none}
-	#bottomPagination,.no-nav #bottomPagination{padding:0 20px}
-	#siteNav{float:none;width:100%;padding:0;margin:0;font-size:.95em}
-	#siteNav a{padding:10px 20px}
-	#siteNav ul ul a{padding-left:40px}
-	#siteNav ul ul ul a{padding-left:60px}		
-	#main-wrapper,.no-nav #main-wrapper{padding-left:20px;padding-right:20px}
-	#siteFooter,.no-nav #siteFooter{padding:20px;text-align:center;margin:0}
-	#content .exe-col{float:none;width:100%;padding:0}
-	iframe,object,embed{max-width:100%}
-	img,video{max-width:100%;height:auto}
-	.pagination{text-align:center;height:35px;position:relative}
-	.pagination .prev{position:absolute;left:0;margin:0}
-	.pagination .next{position:absolute;right:0}	
-	#header-options{position:relative;top:0;left:0;margin:0;background:#FFF;font-size:.95em}
-	#header-options a{margin-left:0;display:block;width:100%;height:auto;color:#3a4749;border-top:1px solid #dbdbdb;border-bottom:1px solid #dbdbdb;line-height:2.6em;letter-spacing:1px;padding:0;text-transform:lowercase}
-	#header-options a span{background:url(_intef_menu.gif) no-repeat 18px 1px;padding-left:45px}
-	#header-options #print-page{display:none}
-	#header-options #toggle-nav{background:none}
-	#bottomPagination .page-counter{margin:0;padding-top:5px;display:inline-block}
+#nav-toggler{margin:0;position:absolute;top:17px;right:95px}
+#info-toggler{margin:0;position:absolute;top:17px;right:69px}
+#nav-toggler a,#info-toggler a{display:block;width:16px;height:16px;background:url(_simplepoint_navigation.png) no-repeat 0 0;outline:none}
+#info-toggler a{background-position:-50px 0}
+#nav-toggler span,.pagination a span,#nodeDecoration,#info-toggler span{position:absolute;overflow:hidden;clip:rect(0,0,0,0);height:0}
+
+/* Search bar */
+#exe-client-search-form{margin-top:10px}
+#exe-client-search-text{border-color:#e3e3e3}
+#exe-client-search-submit{border-color:#e3e3e3;background:#e3e3e3}
+
+@media screen and (min-width: 701px) and (max-width: 1015px) {
+	#siteNav{width:230px}
+	#main-wrapper{padding-left:250px}
 }
 
+.show-instructions .iDevice,.show-instructions .toggle-idevice{display:none!important}
+.show-instructions #style-instructions{display:block!important}
+#style-instructions{max-width:900px;margin:2em auto;font-size:1.2em;line-height:2em}
+#style-instructions ul,#style-instructions li{margin:0;padding:0;list-style:none;line-height:3.5em}
+#style-instructions strong{display:block;float:left;width:3em;font-size:1.3em;text-align:center}
+#style-instructions span{margin-right:1em;color:#777}
+
+@media all and (max-width: 700px) {
+    body{background:#fff}
+	#content{width:100%;background:#fff;border:none;box-shadow:none;margin:0;padding-bottom:0}
+	#header,#emptyHeader{padding-right:40px}
+	#bottomPagination a {bottom:60px;left:17px;position:absolute}
+	#bottomPagination .next{left:auto;right:17px}	
+	#siteNav{float:none;width:100%;padding:0}
+	#main-wrapper,.no-nav #main-wrapper{padding:0 10px;min-height:100px}
+	#nodeTitle{margin-top:.5em}
+	#siteFooter,.no-nav #siteFooter{position:static;bottom:auto;width:auto;padding:25px 50px;height:auto;line-height:1.5em;min-height:50px;text-align:center}
+	#topPagination{position:absolute;overflow:hidden;clip:rect(0,0,0,0);height:0}
+	#bottomPagination .page-counter{position:static;bottom:auto;color:#000;text-align:center;display:block;margin-bottom:1.5em}
+	.page-counter-label{display:inline}
+    #packageLicense,#packageLicense a{background:none;padding:0;text-align:center;color:#444}
+	#content .exe-col{float:none;width:100%;padding:0}
+	#info-toggler{right:17px}
+	#nav-toggler span{position:static;overflow:visible;clip:auto;height:auto} /* Reset */
+	#nav-toggler{position:relative;top:0;left:0;margin:0;text-align:center}
+	#nav-toggler a{width:100%;height:auto;background:none;background:#F9F9F9;color:#333;border-bottom:1px solid #e3e3e3;line-height:2.3em;font-weight:bold;letter-spacing:1px}
+	#nav-toggler a:hover{background:#F0F0F0;text-decoration:none;text-shadow:1px 1px 1px #fff}		
+	#nav-toggler a:focus{text-decoration:none}
+	#exe-client-search-form{margin-top:2em}
+	.exe-search-bar #siteNav{margin-bottom:0}
+}
 @media print{
-	#header,#emptyHeader{margin:0;padding-top:30px;padding-left:0}
-	#siteNav,#header-options,.noprt,.toggle-idevice,#exe-client-search{display:none!important}
-	#main-wrapper,.no-nav #main-wrapper{padding:20px 0;box-shadow:none}
-	body #content{background:#FFF}
-	#content{max-width:100%}
+	#siteNav,#nav-toggler,.noprt{display:none}
+	body #main-wrapper,body.no-nav #main-wrapper{padding:20px 0}
+	#packageLicense{position:relative;bottom:auto;right:auto;text-indent:0}
+	#packageLicense.cc{width:auto;height:auto;padding:0;right:auto;bottom:auto}
+	#packageLicense.cc p{position:relative;overflow:auto;clip:auto;height:auto}
 }
